# python-jwt

./: .gitignore  .mypy.ini  .travis.yml  LICENSE  LICENSE.md  LICENSE.rst  MANIFEST.in  README.md  README.rst  circle.yml  pyproject.toml  requirements-dev.txt  setup.cfg  setup.py  tox.ini
.circleci/: config.yml  requirements.txt
.github/: dependabot.yml
gjwt/: exceptions.py  jwa.py  jwk.py  jwkset.py  jwt.py
gjwt/tests/: test_jws.py  test_jwt.py  test_utils.py
gjwt/tests/testdata/: rsa_privkey.json
jwt/: __init__.py  exceptions.py  interfaces.py  jwa.py  jwk.py  jwkset.py  jws.py  jwt.py  utils.py
jwt/tests/: __init__.py  helper.py  test_jwa.py  test_jwk.py  test_jwkset.py  test_jws.py  test_jwt.py  test_utils.py
jwt/tests/testdata/: oct.json  rsa_privkey.der  rsa_privkey_full.json
tests/: __init__.py  helper.py  test_jwa.py  test_jwk.py  test_jwkset.py  test_jws.py  test_jwt.py  test_utils.py
tests/testdata/: dsa_privkey.pem  rsa_privkey.der  rsa_pubkey.json
